--- a/src/theme/light/_smui-theme.scss
+++ b/src/theme/light/_smui-theme.scss
@@ -1,7 +1,5 @@
 @use 'sass:color';
-
 @use '@material/theme/color-palette';
-
 @use '@material/theme/index' as theme with
   (
     $primary: #e73a00,
@@ -10,8 +8,12 @@
     $background: #fff,
     $error: color-palette.$red-900
   );
-
 @use '@material/typography/index' as typography;
+
+:root {
+  --input-background-color: whitesmoke;
+  --input-label-color: rgba(0, 0, 0, 0.42);
+}
 
 html,
 body {
